# SpaceAmb

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
config/: config.yaml
data/processed/: descriptors.csv  descriptors.json  matrix_atoms_combined.csv  ranking_atoms_fun_cafeteria.csv  ranking_atoms_relaxing_living_room.csv  ranking_atoms_somber_conference_room.csv  ranking_atoms_spooky_dance_hall.csv  ranking_descriptors_fun_cafeteria.csv  ranking_descriptors_relaxing_living_room.csv  ranking_descriptors_somber_conference_room.csv  ranking_descriptors_spooky_dance_hall.csv  scores_color_curtain_pairs_living_room_zscore.xlsx  scores_colors_curtain_living_room_zscore.xlsx
data/processed/embeddings/: atoms.npy  atoms_index.json  descriptors.npy  descriptors_index.json  queries_ambiance.npy  queries_ambiance_index.json  queries_combined.npy  queries_combined_index.json  queries_space.npy  scenes.npy  (+8 more)
data/raw/: ambiances.json  atoms.json  generated_scenes.json  programs.json  scenes.json
notebooks/: 01_prototype_demo.ipynb
scripts/: generate_scenes.py  make_notebook.py  run_analysis.py  score_color_curtain_pairs_living_room.py  score_colors_curtain_living_room.py
src/semantic_architecture/: analysis.py  app_state.py  atoms.py  cli.py  composition.py  embeddings.py  io_utils.py  queries.py  scenes.py  scoring.py  visualization.py
src/semantic_architecture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_sanity.py
tmp/: analyze_results.py  inspect_lexicon.py
